Missed build.xml due to aggressive pattern in .gitignore. Added spring-test and junit dependencies. Remapped controller from test to app in web.xml. Added a simple JUnit test

--- a/ivy.xml
+++ b/ivy.xml
@@ -8,10 +8,13 @@
         <configurations>
         	<conf name="compile" description="Compile-time dependencies" />
         	<conf name="runtime" description="Runtime dependencies" />
+        	<conf name="test" description="Test dependencies" extends="runtime"/>
         </configurations>
         <dependencies>
         	<dependency org="org.springframework" name="org.springframework.orm" rev="3.0.2.RELEASE" conf="compile->compile,hibernate,provided;runtime" />
         	<dependency org="org.springframework" name="org.springframework.web.servlet" rev="3.0.2.RELEASE" conf="compile->compile,provided;runtime"/>
+        	<dependency org="org.springframework" name="org.springframework.test" rev="3.0.2.RELEASE" conf="test->compile,provided,runtime" />
+        	<dependency org="org.junit" name="com.springsource.org.junit" rev="4.8.1" conf="test->runtime" />
         	<dependency org="javax.transaction" name="com.springsource.javax.transaction" rev="1.1.0" conf="compile->compile,provided;runtime->provided"/>
         	<dependency org="javax.persistence" name="com.springsource.javax.persistence" rev="1.0.0" conf="compile->compile,provided;runtime->provided"/>
         	<dependency org="org.postgresql" name="com.springsource.org.postgresql.jdbc4" rev="8.3.604" conf="compile->compile,provided;runtime" />        	
