--- a/ivy.xml
+++ b/ivy.xml
@@ -17,7 +17,8 @@
         	<dependency org="org.junit" name="com.springsource.org.junit" rev="4.8.1" conf="test->runtime" />
         	<dependency org="javax.transaction" name="com.springsource.javax.transaction" rev="1.1.0" conf="compile->compile,provided;runtime->provided"/>
         	<dependency org="javax.persistence" name="com.springsource.javax.persistence" rev="1.0.0" conf="compile->compile,provided;runtime->provided"/>
-        	<dependency org="org.postgresql" name="com.springsource.org.postgresql.jdbc4" rev="8.3.604" conf="compile->compile,provided;runtime" />        	
+        	<dependency org="org.postgresql" name="com.springsource.org.postgresql.jdbc4" rev="8.3.604" conf="compile->compile,provided;runtime" />
+        	<dependency org="org.apache.commons" name="com.springsource.org.apache.commons.dbcp" rev="1.2.2.osgi" conf="compile->compile,provided;runtime" />        	
         	<dependency org="org.hibernate" name="com.springsource.org.hibernate.annotations" rev="3.4.0.GA" conf="compile->compile,provided;runtime" />        	        	
 			<dependency org="org.slf4j" name="com.springsource.slf4j.jcl" rev="1.5.6" conf="compile->compile,provided;runtime" />
         	<conflict org="org.slf4j" module="com.springsource.slf4j.api" rev="1.5.6" />
