--- a/src/main/web/WEB-INF/web.xml
+++ b/src/main/web/WEB-INF/web.xml
@@ -6,8 +6,7 @@
 	<listener> 
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class> 
 	</listener> 
-	
-     
+	     
     <!-- Default the request to UTF-8 --> 
     <filter> 
     	<filter-name>CharacterEncodingFilter</filter-name> 
@@ -23,22 +22,20 @@
         <url-pattern>/*</url-pattern> 
     </filter-mapping> 
     
- 
     <!-- Handles all requests into the application --> 
     <servlet> 
-        <servlet-name>Spring MVC Dispatcher Servlet</servlet-name> 
+        <servlet-name>spring-dispatcher-servlet</servlet-name> 
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class> 
         <init-param> 
             <param-name>contextConfigLocation</param-name> 
             <param-value>/WEB-INF/app-beans.xml</param-value> 
         </init-param> 
         <load-on-startup>1</load-on-startup> 
-    </servlet> 
- 
-    <!-- Maps all /app requests to the DispatcherServlet for handling --> 
+    </servlet>
+    
     <servlet-mapping> 
-        <servlet-name>Spring MVC Dispatcher Servlet</servlet-name> 
-        <url-pattern>/app/*</url-pattern> 
-    </servlet-mapping> 
- 
+        <servlet-name>spring-dispatcher-servlet</servlet-name> 
+        <url-pattern>/app/*</url-pattern>
+    </servlet-mapping>
+              
 </web-app> 
