--- a/src/main/web/WEB-INF/web.xml
+++ b/src/main/web/WEB-INF/web.xml
@@ -7,6 +7,16 @@
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class> 
 	</listener> 
 	     
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
     <!-- Default the request to UTF-8 --> 
     <filter> 
     	<filter-name>CharacterEncodingFilter</filter-name> 
